<resources>
    <string name="app_name">Memory Mash</string>

    <!-- In activity_main.xml -->
    <string name="play_game">New Game</string>
    <string name="high_scores">High Scores</string>
    <string name="tutorial">Tutorial</string>
    <string name="edit_profile">Profile Settings</string>

    <!-- In menu.main as title -->
    <string name="title_icon">Icon</string>

    <!-- Strings in activity_settings.xml -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_name_hint">Name</string>
    <string name="settings_age_hint">Age</string>
    <string name="settings_gender_hint">Gender</string>
    <string name="settings_select_gender">Select Gender</string>
    <string name="settings_description">Update your profile here!</string>
    <string name="settings_save">Save Changes</string>
    <string name="title_activity_game">GameActivity</string>

    <!-- Timer strings -->
    <string name="timer_time_description">Time:</string>
    <string name="initial_time">0000:000</string>
    <string name="winner_text">Winner!</string>

    <!-- Dialog button string -->
    <string name="ok">Ok</string>
    <string name="title_activity_high_score">HighScoreActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Highscores strings -->
    <string name="highscores_description">High Scores</string>
    <string name="highscores_easy">Easy</string>
    <string name="highscores_medium">Medium</string>
    <string name="highscores_difficult">Difficult</string>
    <string name="settings_card_type">Select Card Type</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial_frag1_startgame">Start a new game</string>
    <string name="choose_field_message">Choose any field</string>

</resources>

