<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.ait.android.uriel.memorygame.SettingsActivity">

    <TextView
        android:id="@+id/settings_description"
        android:text="@string/settings_description"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:background="@drawable/textviewshape_brown"
        style="@style/Font"/>

    <EditText
        android:id="@+id/settings_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/settings_name_hint"
        android:layout_below="@id/settings_description"
        android:layout_centerHorizontal="true"
        android:background="@color/White"/>

    <EditText
        android:id="@+id/settings_age"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/settings_age_hint"
        android:numeric="integer"
        android:layout_below="@id/settings_name"
        android:layout_centerHorizontal="true"
        android:background="@color/White"/>

    <TextView
        android:id="@+id/settings_tv_gender"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/settings_select_gender"
        android:layout_below="@id/settings_age"
        android:layout_centerHorizontal="true"
        android:background="@color/White"/>

    <Spinner
        android:id="@+id/settings_gender"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@id/settings_tv_gender"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/settings_cards_tv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/settings_card_type"
        android:layout_below="@id/settings_gender"
        android:layout_centerHorizontal="true"
        android:background="@color/White"/>

    <Spinner
        android:id="@+id/settings_cards"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@id/settings_cards_tv"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/settings_save"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/base"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/settings_save"
        android:background="@drawable/buttonshape_blue"
        style="@style/Font"/>

    <TextView
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/textviewshape_brown"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-15dp"/>

</RelativeLayout>
