<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_brain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:rb_color="@color/DarkBlue"
        app:rb_duration="3000"
        app:rb_radius="28dp"
        app:rb_rippleAmount="2"
        app:rb_scale="6">

        <ImageView
            android:id="@+id/embedded_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/brain" />

    </com.skyfishjy.library.RippleBackground>

    <Button
        android:id="@+id/new_game"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:layout_marginTop="-100dp"
        android:text="@string/play_game"
        android:background="@drawable/buttonshape_blue"
        android:visibility="invisible" />

    <Button
        android:id="@+id/change_profile"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/new_game"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/edit_profile"
        android:background="@drawable/buttonshape_green"
        android:visibility="invisible" />

    <Button
        android:id="@+id/tutorial"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/change_profile"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/tutorial"
        android:background="@drawable/buttonshape_brown"
        android:visibility="invisible" />

    <Button
        android:id="@+id/high_scores"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/tutorial"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/high_scores"
        android:background="@drawable/buttonshape_lightblue"
        android:visibility="invisible" />

</RelativeLayout>
