<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.ait.android.uriel.memorygame.GameFragment">

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:gravity="left"
        style="@style/TextViewLook"/>

    <TextView
        android:id="@+id/tv_time_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_level"
        android:text="@string/timer_time_description"
        style="@style/TextViewLook"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_time_description"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_marginRight="15dp"
        style="@style/TextViewLook"
        android:text="@string/initial_time"/>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_level"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="20dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:listSelector="@color/BabyBrown"
        android:gravity="center">

    </GridView>

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_above="@+id/main_menu_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/winner_text"
        android:visibility="invisible"
        android:background="@drawable/buttonshape_green"
        style="@style/TextViewLook"/>

    <Button
        android:id="@+id/main_menu_button"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:text="Main Menu"
        android:background="@drawable/buttonshape_blue"
        android:visibility="invisible"
        style="@style/TextViewLook"/>

</RelativeLayout>
